--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gridsome": "^0.6.0"
   },
   "devDependencies": {
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0"
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0"
   }
 }
