--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   "dependencies": {
     "@gridsome/source-filesystem": "^0.5.0",
     "@gridsome/transformer-remark": "^0.3.2",
-    "gridsome": "^0.6.0"
+    "gridsome": "^0.6.0",
+    "vue": "^2.6.4",
+    "vuetify": "^2.0.7",
+    "webpack": "^4.0.0"
   },
   "devDependencies": {
+    "node-sass": "^4.12.0",
     "pug": "^2.0.4",
-    "pug-plain-loader": "^1.0.0"
+    "pug-plain-loader": "^1.0.0",
+    "sass-loader": "^7.2.0",
+    "webpack-node-externals": "^1.7.2"
   }
 }
