--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gemeindescan",
+  "name": "cividi_gemeindescan",
   "private": true,
   "scripts": {
     "serve": "gridsome serve",
@@ -10,9 +10,9 @@
   "dependencies": {
     "@gridsome/source-filesystem": "^0.5.0",
     "@gridsome/transformer-remark": "^0.3.2",
+    "@inkline/inkline": "^1.16.1",
     "gridsome": "^0.6.0",
     "vue": "^2.6.4",
-    "vuetify": "^2.0.7",
     "webpack": "^4.0.0"
   },
   "devDependencies": {
