--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@gridsome/source-filesystem": "^0.5.0",
+    "@gridsome/transformer-json": "^0.2.1",
     "@gridsome/transformer-remark": "^0.3.2",
     "@inkline/inkline": "^1.16.1",
+    "datapackage": "^1.1.4",
     "gridsome": "^0.6.0",
     "vue": "^2.6.4",
     "webpack": "^4.0.0"
