--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@inkline/inkline": "^1.16.1",
     "datapackage": "^1.1.4",
     "gridsome": "^0.6.0",
+    "mapbox-gl": "^1.3.0",
     "vue": "^2.6.4",
+    "vue-mapbox": "^0.4.1",
     "webpack": "^4.0.0"
   },
   "devDependencies": {
