--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@inkline/inkline": "^1.16.1",
     "datapackage": "^1.1.4",
     "gridsome": "^0.6.0",
-    "mapbox-gl": "^1.3.0",
+    "mapbox-gl": "^0.53.0",
     "vue": "^2.6.4",
     "vue-mapbox": "^0.4.1",
     "webpack": "^4.0.0"
   },
   "devDependencies": {
     "node-sass": "^4.12.0",
+    "null-loader": "^3.0.0",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.2.0",
